WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233125
[LFC][Integration] fast/text/international/bidi-innertext.html fails with BiDi enabled
https://bugs.webkit.org/show_bug.cgi?id=233125
Summary
[LFC][Integration] fast/text/international/bidi-innertext.html fails with BiD...
Antti Koivisto
Reported
2021-11-15 06:23:48 PST
We fail to set RenderText::containsReversedText bit
Attachments
Patch
(14.96 KB, patch)
2021-11-15 06:28 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(14.35 KB, patch)
2021-11-15 06:30 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-11-15 06:28:49 PST
Created
attachment 444249
[details]
Patch
Antti Koivisto
Comment 2
2021-11-15 06:30:19 PST
Created
attachment 444250
[details]
Patch
EWS
Comment 3
2021-11-15 07:51:52 PST
Committed
r285807
(
244251@main
): <
https://commits.webkit.org/244251@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 444250
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-11-15 07:52:23 PST
<
rdar://problem/85411984
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug