[LFC][Integration] fast/text/international/bidi-innertext.html fails with BiDi enabled https://bugs.webkit.org/show_bug.cgi?id=233125

Reviewed by Alan Bujtas.

TextIterator needs to know that RenderText contains bidi text.

* layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::InlineItemsBuilder::handleTextContent):

Use the InlineTextBox bit.

* layout/formattingContexts/inline/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::containsBidiText):

Add a helper.

* layout/formattingContexts/inline/text/TextUtil.h:
* layout/integration/InlineIteratorLogicalOrderTraversal.cpp:
(WebCore::InlineIterator::makeTextLogicalOrderCacheIfNeeded):
* layout/integration/LayoutIntegrationBoxTree.cpp:
(WebCore::LayoutIntegration::BoxTree::buildTree):
* layout/layouttree/LayoutInlineTextBox.cpp:
(WebCore::Layout::InlineTextBox::InlineTextBox):
(WebCore::Layout::m_containsBidiText):

Add a bit to the InlineTextBox.

(WebCore::Layout::m_canUseSimplifiedContentMeasuring): Deleted.
* layout/layouttree/LayoutInlineTextBox.h:
(WebCore::Layout::InlineTextBox::containsBidiText const):
* layout/layouttree/LayoutTreeBuilder.cpp:
(WebCore::Layout::TreeBuilder::createTextBox):
* rendering/RenderText.cpp:
(WebCore::RenderText::RenderText):
(WebCore::RenderText::positionLineBox):
* rendering/RenderText.h:
(WebCore::RenderText::containsBidiText const):
(WebCore::RenderText::setContainsBidiText):
(WebCore::RenderText::containsReversedText const): Deleted.



Canonical link: https://commits.webkit.org/244251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285807 268f45cc-cd09-0410-ab3c-d52691b4dbfc