Source/WebCore/layout/formattingContexts/inline/text/TextUtil.h
@@ -64,6 +64,7 @@ public:
     static bool shouldPreserveNewline(const Box&);
     static bool canUseSimplifiedTextMeasuringForFirstLine(const RenderStyle&, const RenderStyle& firstLineStyle);
     static bool isWrappingAllowed(const RenderStyle&);
+    static bool containsBidiText(StringView);
 };
 
 }
